[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/kenvector_future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.117647, 0.0980392, 0.0980392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = 128.0
custom_constants/vseparation = 100
custom_constants/hseparation = 150
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "MineSweeper Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_top = 180.0
margin_right = 352.0

[node name="Cell_count" type="Label" parent="Info"]
margin_right = 352.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="lives_left" type="Label" parent="Info"]
margin_top = 272.0
margin_right = 352.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 640.0
margin_top = 360.0
margin_right = 840.0
margin_bottom = 560.0
rect_scale = Vector2( 1.48776, 1.24709 )
window_title = "Message"

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
